# terranox-desktop

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.reuse/: dep5
crates/trx-bar/: Cargo.toml
crates/trx-bar/src/: font.rs  main.rs  render.rs
crates/trx-compositor/: Cargo.toml
crates/trx-compositor/src/: lib.rs
crates/trx-compositor/src/components/: mod.rs
crates/trx-compositor/src/ecs/: archetype.rs  component.rs  entity.rs  event.rs  hierarchy.rs  mod.rs  plugin.rs  resource.rs  schedule.rs  storage.rs  system.rs  world.rs
crates/trx-compositor/src/platform/: mod.rs
crates/trx-compositor/src/render/: backend.rs  drm.rs  gpu.rs  mod.rs  software.rs
crates/trx-compositor/src/resources/: mod.rs
crates/trx-compositor/src/scene/: deserialize.rs  format.rs  loader.rs  mod.rs  serialize.rs
crates/trx-compositor/src/systems/: mod.rs
crates/trx-dock/: Cargo.toml
crates/trx-dock/src/: main.rs
crates/trx-greeter/: Cargo.toml
crates/trx-greeter/src/: main.rs
crates/trx-launcher/: Cargo.toml
crates/trx-launcher/src/: main.rs
crates/trx-sentinel/: Cargo.toml
crates/trx-sentinel-dashboard/: Cargo.toml
crates/trx-sentinel-dashboard/src/: main.rs
crates/trx-sentinel/src/: lib.rs  mock_server.rs  protocol.rs
theme/: TerranoxDesktop.jsx
theme/fonts/: README.md
theme/hyprland/: sentinel.conf  terranox.conf
theme/obsidian/: gtk4.css
theme/sentinel/: gtk4.css
