# SPDX-License-Identifier: Apache-2.0
#
# Workspace root for TerranoxOS desktop shells and Wayland clients.
# See README.md for integration with terranox-os (rootfs / trx build desktop).

[workspace]
resolver = "2"
members = [
    "crates/trx-bar",
    "crates/trx-dock",
    "crates/trx-greeter",
    "crates/trx-launcher",
    "crates/trx-sentinel",
    "crates/trx-sentinel-dashboard",
]
